# ligilo

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.dev.yml  compose.yml
.github/workflows/: publish-docs.yml  publish.yml  test.yml
docs/: index.html  openapi.yml
migrations/: 001_initial.sql  002_uuid_id.sql
src/: db.rs  lib.rs  main.rs  routes.rs
tests/: integration_tests.rs  load_test.rs
