[package]
name = "ligilo"
version = "0.2.1"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.51.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
nanoid = "0.4.0"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
moka = { version = "0.12.8", features = ["future"] }

[dev-dependencies]
serde_json = "1.0.149"
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
reqwest = { version = "0.13.2", features = ["json"], default-features = false }
